tests/error/protocol_errors/self_no_self_arg.err
Error: Invalid self annotation (at $FILE:7:15)
  | 
5 | class Foo:
6 |     @guppy.require
7 |     def foo(n: nat) -> None: ...
  |                ^^^ `n` must be of type `self`

Guppy compilation failed due to 1 previous error
